Update some links

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	<section>
 		<h1>About</h1>
 		<p>This is a collaborative effort to aggregate all things tech in Malaysia, heavily inspired by <a href="http://connections.sg/">connections.sg</a>. Also for the purpose of promoting synergy, connections &amp; community spirit.</p>
-		<p>Curated &amp; maintained by <a href="http://twitter.com/cheeaun">@cheeaun</a>. <a href="https://docs.google.com/document/d/1IqH1yfNiIU_JrWrB2lPf7Ow1Z0rRaHSJNIxo-VzeXPk/edit?hl=en">Feedback</a> &amp; <a href="https://github.com/cheeaun/connectionsmy">contributions</a> are welcomed.</p>
+		<p>Curated &amp; maintained by <a href="http://twitter.com/cheeaun">@cheeaun</a>. <a href="https://github.com/cheeaun/connectionsmy/issues">Feedback</a> &amp; <a href="https://github.com/cheeaun/connectionsmy">contributions</a> are welcomed.</p>
 	</section>
 
 	<section>
@@ -133,7 +133,7 @@
 	<section>
 		<h1>Blogs</h1>
 		<ul>
-			<li><a href="http://www.entrepreneurs.my/">Malaysia Entrepreneurs</a></li>
+			<li><a href="http://www.nextupasia.com/">Next Up Asia</a></li>
 			<li><a href="http://www.greyreview.com/">Grey Review</a></li>
 			<li><a href="http://amanz.my/">Amanz.my</a></li>
 		</ul>
@@ -144,7 +144,7 @@
 	<section>
 		<h1>Influencers</h1>
 		<ul>
-			<li><a href="http://entrepreneurs.my/">Daniel Cerventus</a></li>
+			<li><a href="http://www.nextupasia.com/">Daniel Cerventus</a></li>
 			<li><a href="http://www.greyreview.com/">Lim Ying-Hui</a></li>
 			<li><a href="http://vernonchan.com/">Vernon Chan</a></li>
 			<li><a href="http://www.bytebot.net/">Colin Charles</a></li>
@@ -160,7 +160,7 @@
 		<h1>Connectors</h1>
 		<ul>
 			<li><a href="http://mikefoong.com/">Mike Foong</a></li>
-			<li><a href="http://entrepreneurs.my/">Daniel Cerventus</a></li>
+			<li><a href="http://www.nextupasia.com/">Daniel Cerventus</a></li>
 			<li><a href="http://lightyoruichi.com/">Harinder Singh</a></li>
 		</ul>
 	</section>
@@ -171,7 +171,7 @@
 			<li><a href="http://blog.bitfluent.com/">Kamal Fariz</a></li>
 			<li><a href="http://aizatto.com/">Aizat Faiz</a></li>
 			<li><a href="http://ar.zu.my/">Arzumy</a></li>
-			<li><a href="http://www.buyot.org/">Nazrul Kamaruddin</a></li>
+			<li><a href="http://www.nazroll.com/">Nazrul Kamaruddin</a></li>
 			<li><a href="http://www.bernie-eng.com/">Bernie Eng</a></li>
 			<li><a href="http://www.kriskhaira.com/">Kris Khaira</a></li>
 			<li><a href="http://ditesh.gathani.org/">Ditesh Gathani</a></li>
@@ -200,7 +200,7 @@
 			<li><a href="http://www.codeandroid.my/">CodeAndroid Malaysia</a></li>
 			<li><a href="http://smckl.org/">Social Media Club KL</a></li>
 			<li><a href="http://weekend.my">Weekend Movement</a></li>
-			<li><a href="http://www.gtugkl.org/">GTUG KL</a></li>
+			<li><a href="http://gdg.my/">GDG KL</a></li>
 			<li><a href="http://groups.google.com/group/malaysia-rb">Malaysia Ruby Brigade</a></li>
 			<li><a href="http://www.technopreneur.my">Technopreneurs Association of Malaysia</a></li>
 			<li><a href="http://www.php.net.my/">PHP Meetup</a></li>
