--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 			<li><a href="http://ditesh.gathani.org/">Ditesh Gathani</a></li>
 			<li><a href="http://shuj.in/">Jinny Wong</a></li>
 			<li><a href="http://zerply.com/claytonnarcis">Clayton Narcis</a></li>
+			<li><a href="http://lornatimbah.com">Lorna Timbah</a></li>
 		</ul>
 	</section>
 
@@ -201,6 +202,7 @@
 			<li><a href="http://smckl.org/">Social Media Club KL</a></li>
 			<li><a href="http://weekend.my">Weekend Movement</a></li>
 			<li><a href="http://gdg.my/">GDG KL</a></li>
+			<li><a href="http://www.gdgkk.info/">GDG Kota Kinabalu</a></li>
 			<li><a href="http://groups.google.com/group/malaysia-rb">Malaysia Ruby Brigade</a></li>
 			<li><a href="http://www.technopreneur.my">Technopreneurs Association of Malaysia</a></li>
 			<li><a href="http://www.php.net.my/">PHP Meetup</a></li>
