--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 			<li><a href="http://mikefoong.com/">Mike Foong</a></li>
 			<li><a href="http://www.nextupasia.com/">Daniel Cerventus</a></li>
 			<li><a href="http://lightyoruichi.com/">Harinder Singh</a></li>
+			<li><a href="http://lornatimbah.com">Lorna Timbah</a></li>
 		</ul>
 	</section>
 
@@ -177,7 +178,6 @@
 			<li><a href="http://ditesh.gathani.org/">Ditesh Gathani</a></li>
 			<li><a href="http://shuj.in/">Jinny Wong</a></li>
 			<li><a href="http://zerply.com/claytonnarcis">Clayton Narcis</a></li>
-			<li><a href="http://lornatimbah.com">Lorna Timbah</a></li>
 		</ul>
 	</section>
 
@@ -203,6 +203,7 @@
 			<li><a href="http://weekend.my">Weekend Movement</a></li>
 			<li><a href="http://gdg.my/">GDG KL</a></li>
 			<li><a href="http://www.gdgkk.info/">GDG Kota Kinabalu</a></li>
+			<li><a href="//kinabalucoders.org">Kinabalu Coders</a></li>
 			<li><a href="http://groups.google.com/group/malaysia-rb">Malaysia Ruby Brigade</a></li>
 			<li><a href="http://www.technopreneur.my">Technopreneurs Association of Malaysia</a></li>
 			<li><a href="http://www.php.net.my/">PHP Meetup</a></li>
