--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
 			<li><a href="http://ditesh.gathani.org/">Ditesh Gathani</a></li>
 			<li><a href="http://shuj.in/">Jinny Wong</a></li>
 			<li><a href="http://zerply.com/claytonnarcis">Clayton Narcis</a></li>
+			<li><a href="http://paragasu.github.com"> Jeffry Lunggot </a></li>
 		</ul>
 	</section>
 
