--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
 			<li><a href="http://smckl.org/">Social Media Club KL</a></li>
 			<li><a href="http://weekend.my">Weekend Movement</a></li>
 			<li><a href="http://gdg.my/">GDG KL</a></li>
-			<li><a href="http://www.gdgkk.info/">GDG Kota Kinabalu</a></li>
+			<li><a href="//www.gdgkk.info/">GDG Kota Kinabalu</a></li>
+			<li><a href="//www.facebook.com/groups/431740983690791/">Game Developer Group KK</a></li>
 			<li><a href="//kinabalucoders.org">Kinabalu Coders</a></li>
 			<li><a href="http://groups.google.com/group/malaysia-rb">Malaysia Ruby Brigade</a></li>
 			<li><a href="http://www.technopreneur.my">Technopreneurs Association of Malaysia</a></li>
